# trendbox-product-matching

./: .env.example  .gitignore  LICENSE  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py  schemas.py
data/reports/: catalog_profile.json
docs/: CALISMA_RAPORU.md  DATA_PIPELINE.md  MATCH_QUALITY_DEMO.md
notebooks/: 01_exploration.ipynb  02_experiments.ipynb
scripts/: audit_size_quality.py  evaluate.py  profile_data.py  run_batch.py
src/: batch.py  blocking.py  confidence.py  config.py  data_profile.py  database.py  embedding_reranker.py  index_builder.py  match_metadata.py  match_quality.py  matcher.py  pack_profile.py  preprocess.py  reference_catalog.py  tfidf_retriever.py
src/db/: __init__.py  analytics.py  catalog.py  matches.py  models.py  quality.py  session.py
tests/: conftest.py  helpers.py  run_all_tests.py  test_api.py  test_blocking.py  test_confidence.py  test_match_metadata.py  test_match_quality.py  test_matcher.py  test_pack_profile.py  test_preprocess.py  test_product_kind.py  test_retrieval_weight.py
ui/: _bootstrap.py  api_client.py  app.py  theme.py
ui/pages/: 01_Review.py  02_Analytics.py  03_Pipeline.py  04_Quality.py  2_Stats.py
ui/utils/: charts.py  components.py  layout.py  styles.py  tables.py  theme.py
